--- a/.gyu/plugin-design/v0.1-build.md
+++ b/.gyu/plugin-design/v0.1-build.md
@@ -2,41 +2,90 @@
 
 > v0.1 범위: conventions/ + skills/fe-principles
 
+## v0.1 최종 구조
+
+```
+fe-workflow/
+├── .claude-plugin/
+│   └── plugin.json                          ← 플러그인 메타데이터
+│
+├── conventions/                             ← SSOT (상세 규칙/패턴)
+│   ├── code-principles.md                   ← 코드 철학/원칙 (톤 정리 완료)
+│   ├── folder-structure.md                  ← 폴더 구조 (톤 정리 완료)
+│   ├── api-layer.md                         ← API/타입 계층 (톤 정리 완료)
+│   └── error-handling.md                    ← 에러 핸들링 (초판, 톤 정리 추후)
+│
+└── skills/
+    └── fe-principles/
+        └── SKILL.md                         ← 자동 로드 요약 (conventions 참조)
+```
+
+### 데이터 흐름
+
+```
+SKILL.md (자동 로드, 요약)
+  ├→ conventions/code-principles.md
+  ├→ conventions/folder-structure.md
+  ├→ conventions/api-layer.md
+  └→ conventions/error-handling.md
+
+v0.2+ 예정:
+  commands/ ─→ conventions/ 참조
+  agents/  ─→ conventions/ 참조
+```
+
 ## 소스 매핑
 
-best-practices(notes 레포)와 기존 conventions를 통합하여 fe-workflow/conventions/ 생성.
+| 대상 파일 | 소스 | 액션 | 톤 정리 |
+|-----------|------|------|---------|
+| `code-principles.md` | notes: best-code/ | **NEW** | ✅ 완료 |
+| `folder-structure.md` | 기존 convention | **KEEP** | ✅ 완료 (섹션 7 제거, 섹션 1 통합) |
+| `api-layer.md` | 기존 + notes: api/ + react-query/ | **ENHANCE** | ✅ 완료 (대폭 정리) |
+| `error-handling.md` | notes: error-handling/ | **NEW** | ⏳ 추후 |
 
-| 대상 파일 | 소스 | 액션 |
-|-----------|------|------|
-| `code-principles.md` | notes: best-code/ | **NEW** - 코드 철학/원칙 |
-| `folder-structure.md` | 기존 convention | **KEEP** - 이미 충분 |
-| `api-type-layer.md` | 기존 + notes: api/ + react-query/ | **ENHANCE** - HttpClient, VO, staleTime, normalizeFilters, Suspense, SSR |
-| `component-design.md` | 기존 convention | **KEEP** - 이미 충분 |
-| `page-structure.md` | 기존 convention | **KEEP** - 이미 충분 |
-| `error-handling.md` | notes: error-handling/ | **NEW** - AppError, ErrorBoundary |
+### v0.1에서 제외 (v0.2+ 이관)
 
-### 제외 항목
+| 파일 | 이관 형태 | 사유 |
+|------|-----------|------|
+| `component-design.md` | conventions 선택적 추가 | 좋은 규칙은 code-principles에 포함. 나머지 프로젝트 특화 |
+| `page-structure.md` | command/template (`/scaffold`) | 보일러플레이트 레시피, 컨벤션 아님 |
+| `form-pattern` | conventions 추가 | 미작성 |
+| notes: logger/ | 제외 | 프로젝트 특화 |
 
-| 소스 | 사유 |
-|------|------|
-| notes: logger/ | 프로젝트 특화. v0.1 범위 초과 |
-| notes: form/ | v0.2+에서 추가 |
-| react-query.md (별도 파일) | api-type-layer.md에 통합 |
+## 톤 정리 주요 변경
+
+### code-principles.md
+- 포맷 통일: `> 한 줄 핵심` → `### 규칙` → `### 예시(❌/✅)`
+- AI 판단 불가한 애매한 기준 제거
+- VO 패턴 불채택 → 개별 함수 추출
+- `onChange={(value) => setMonth(value)}` 래핑 패턴 채택
+
+### folder-structure.md
+- 섹션 7 (개발 흐름) 제거 — 섹션 1 Page First와 중복
+- 판단 기준 테이블만 섹션 1로 통합
+- `{domain}/{feature}` → `{page}` 단순화
+
+### api-layer.md (api-type-layer → 리네임)
+- HttpClient 구현 → Remotes 규칙 1줄로 통합
+- VO 패턴, SSR Hydration, 폴더 구조(중복) 제거
+- 추가: SearchParamsBuilder, CursorPagination, DTO 파일 구성 패턴
+- Params 네이밍: remotes HTTP prefix (`PostMerchantParams`)
+- mutations: queryClient 직접 import, mutateAsync 선호
 
 ## 설계 결정
 
 ### conventions 원칙
 - **액션 가능한 규칙** 중심 (튜토리얼 아님)
 - DO/DON'T + 코드 예시 포맷 유지
-- best-practices의 교육 내용은 축약하여 핵심만
+- AI가 기계적으로 평가 가능한 구체적 규칙
 
-### Skill 역할
-- conventions/에서 **핵심만 추출**한 요약본
-- Claude가 코드 작성/리뷰 시 자동 적용
-- 상세는 conventions/ 참조하도록 링크
+### Skill ↔ Conventions 관계
+- Skill: 자동 로드, 핵심 규칙 요약 (토큰 효율)
+- Conventions: SSOT, 필요시 참조, 패턴+예시 포함
+- 링크: `[conventions/file.md](../../conventions/file.md)`
 
 ### code-principles ↔ CLAUDE.md 관계
-- CLAUDE.md: 원칙 ID + 한줄 요약 테이블 유지 (현재 그대로)
+- CLAUDE.md: 원칙 ID + 한줄 요약 테이블 유지
 - conventions/code-principles.md: 예시+설명 포함 상세 버전
 
 ### 기존 코드와의 관계
@@ -50,13 +99,8 @@ best-practices(notes 레포)와 기존 conventions를 통합하여 fe-workflow/c
 - [x] 소스 분석 완료
 - [x] 매핑 결정
 - [x] 플러그인 골격 생성
-- [x] conventions 파일 생성 (6/6)
-  - [x] code-principles.md (NEW)
-  - [x] folder-structure.md (KEEP → 복사)
-  - [x] api-type-layer.md (ENHANCE)
-  - [x] component-design.md (KEEP → 복사)
-  - [x] page-structure.md (KEEP → 복사)
-  - [x] error-handling.md (NEW)
+- [x] conventions 파일 생성 (4/4)
+- [x] 톤 정리 (3/4, error-handling 추후)
 - [x] skills/fe-principles/SKILL.md 재작성
 - [ ] 검증 (플러그인 로드 테스트)
 
